.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:12:14 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Building file: ../src/main.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'LPTMR0_IRQHandler':
../src/main.c:11:38: error: 'i' undeclared (first use in this function)
  if (direccion) PTB->PDOR=secuencia[(i++)%4];
                                      ^
../src/main.c:11:38: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:35: src/main.o] Error 1
20:13:00 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Building file: ../src/main.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Finished building: ../src/main.c
 
Building target: Stepper_LPTRM0_e_Intr_Externa.elf
Executing target #5 Stepper_LPTRM0_e_Intr_Externa.elf
Invoking: Standard S32DS C Linker
arm-none-eabi-gcc -o "Stepper_LPTRM0_e_Intr_Externa.elf" "@Stepper_LPTRM0_e_Intr_Externa.args"   
Finished building target: Stepper_LPTRM0_e_Intr_Externa.elf
 
Executing target #6 Stepper_LPTRM0_e_Intr_Externa.siz
Invoking: Standard S32DS Print Size
arm-none-eabi-size --format=berkeley  Stepper_LPTRM0_e_Intr_Externa.elf 
   text	   data	    bss	    dec	    hex	filename
   1680	     16	   3080	   4776	   12a8	Stepper_LPTRM0_e_Intr_Externa.elf
Finished building: Stepper_LPTRM0_e_Intr_Externa.siz
 
20:14:31 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Building file: ../src/main.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Finished building: ../src/main.c
 
Building target: Stepper_LPTRM0_e_Intr_Externa.elf
Executing target #5 Stepper_LPTRM0_e_Intr_Externa.elf
Invoking: Standard S32DS C Linker
arm-none-eabi-gcc -o "Stepper_LPTRM0_e_Intr_Externa.elf" "@Stepper_LPTRM0_e_Intr_Externa.args"   
Finished building target: Stepper_LPTRM0_e_Intr_Externa.elf
 
Executing target #6 Stepper_LPTRM0_e_Intr_Externa.siz
Invoking: Standard S32DS Print Size
arm-none-eabi-size --format=berkeley  Stepper_LPTRM0_e_Intr_Externa.elf 
   text	   data	    bss	    dec	    hex	filename
   1740	     16	   3080	   4836	   12e4	Stepper_LPTRM0_e_Intr_Externa.elf
Finished building: Stepper_LPTRM0_e_Intr_Externa.siz
 
20:18:59 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Building file: ../src/main.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Finished building: ../src/main.c
 
Building target: Stepper_LPTRM0_e_Intr_Externa.elf
Executing target #5 Stepper_LPTRM0_e_Intr_Externa.elf
Invoking: Standard S32DS C Linker
arm-none-eabi-gcc -o "Stepper_LPTRM0_e_Intr_Externa.elf" "@Stepper_LPTRM0_e_Intr_Externa.args"   
Finished building target: Stepper_LPTRM0_e_Intr_Externa.elf
 
Executing target #6 Stepper_LPTRM0_e_Intr_Externa.siz
Invoking: Standard S32DS Print Size
arm-none-eabi-size --format=berkeley  Stepper_LPTRM0_e_Intr_Externa.elf 
   text	   data	    bss	    dec	    hex	filename
   1740	     16	   3080	   4836	   12e4	Stepper_LPTRM0_e_Intr_Externa.elf
Finished building: Stepper_LPTRM0_e_Intr_Externa.siz
 
20:21:46 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Building file: ../src/main.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Finished building: ../src/main.c
 
Building target: Stepper_LPTRM0_e_Intr_Externa.elf
Executing target #5 Stepper_LPTRM0_e_Intr_Externa.elf
Invoking: Standard S32DS C Linker
arm-none-eabi-gcc -o "Stepper_LPTRM0_e_Intr_Externa.elf" "@Stepper_LPTRM0_e_Intr_Externa.args"   
Finished building target: Stepper_LPTRM0_e_Intr_Externa.elf
 
Executing target #6 Stepper_LPTRM0_e_Intr_Externa.siz
Invoking: Standard S32DS Print Size
arm-none-eabi-size --format=berkeley  Stepper_LPTRM0_e_Intr_Externa.elf 
   text	   data	    bss	    dec	    hex	filename
   1740	     16	   3080	   4836	   12e4	Stepper_LPTRM0_e_Intr_Externa.elf
Finished building: Stepper_LPTRM0_e_Intr_Externa.siz
 
20:24:02 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Building file: ../src/main.c
Executing target #4 ../src/main.c
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@src/main.args" -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Finished building: ../src/main.c
 
Building target: Stepper_LPTRM0_e_Intr_Externa.elf
Executing target #5 Stepper_LPTRM0_e_Intr_Externa.elf
Invoking: Standard S32DS C Linker
arm-none-eabi-gcc -o "Stepper_LPTRM0_e_Intr_Externa.elf" "@Stepper_LPTRM0_e_Intr_Externa.args"   
Finished building target: Stepper_LPTRM0_e_Intr_Externa.elf
 
Executing target #6 Stepper_LPTRM0_e_Intr_Externa.siz
Invoking: Standard S32DS Print Size
arm-none-eabi-size --format=berkeley  Stepper_LPTRM0_e_Intr_Externa.elf 
   text	   data	    bss	    dec	    hex	filename
   1740	     16	   3080	   4836	   12e4	Stepper_LPTRM0_e_Intr_Externa.elf
Finished building: Stepper_LPTRM0_e_Intr_Externa.siz
 
20:24:18 **** Incremental Build of configuration Debug for project Stepper_LPTRM0_e_Intr_Externa ****
make -j4 all 
Executing target #6 Stepper_LPTRM0_e_Intr_Externa.siz
Invoking: Standard S32DS Print Size
arm-none-eabi-size --format=berkeley  Stepper_LPTRM0_e_Intr_Externa.elf 
   text	   data	    bss	    dec	    hex	filename
   1740	     16	   3080	   4836	   12e4	Stepper_LPTRM0_e_Intr_Externa.elf
Finished building: Stepper_LPTRM0_e_Intr_Externa.siz
 
